<resources>
    <string name="app_name">在线学习</string>
    <string name="title_home">主页</string>
    <string name="title_subscribe">订阅</string>
    <string name="title_myself">我的</string>
    <string name="search_hint">搜索你想搜索的</string>
    <string name="login_logout">登录/注册</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">用户名:</string>
    <string name="password">密码:</string>
    <string name="usuername_defaultMsg">用户名/邮箱/电话号码</string>
    <string name="courses_list">课程列表</string>
</resources>
