<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.qinkuai.homework1.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_subscribe"
        android:name="com.qinkuai.homework1.ui.subscribe.SubscribeFragment"
        android:label="@string/title_subscribe"
        tools:layout="@layout/fragment_subscribe" />

    <fragment
        android:id="@+id/navigation_myself"
        android:name="com.qinkuai.homework1.ui.myself.MyselfFragment"
        android:label="@string/title_myself"
        tools:layout="@layout/fragment_myself" />
</navigation>